--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ Efektem są przedterminowe wybory, w których partia &quot;$partia&quot; zdobywa
 &lt;img src=&quot;https://i.imgur.com/9KnvsTQ.png&quot; height=300px&gt;
 Może bezpośrednio przed wybuchem pandemii wzrost cen nieco przyspieszył, a w pierwszych jego miesiącach wskaźnik cen ciągnęły w góre wybrane produkty, które kupowaliśmy na zapsas, ale spowolnienie gospodarcze związane z pandemią wyraźnie ograniczyło wzrost cen. 
 Uparcie jednak w wywiadach powtarzasz, że powinniśmy podjąć pewne działania dotyczące przeciwdziałania inflacji.
-Ma do wyboru:
+Masz do wyboru:
 (link: &quot;Czytanie wybranych tytułów prasowych i komentarzy internetowych o sobie&quot;)[
 * &quot;Wicepremier walczy z wzrostem cen, którego nie ma&quot;
 * &quot;$nazwisko - u mnie byłaby dwója na egzaminie!&quot;, pisze jeden z profesorów powiązany z poprzednią władzą
