--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ dr J.C., mgr J.M., mgr M.G.
 &lt;a href=&quot;&quot; target=_blank&gt;http://www.thebillionpricesproject.com/our-research/&lt;/a&gt; 
 
 ## Pozostałe
-Nazwy partii politycznych: &lt;a href=&quot;https://twitter.com/mitologiawsp/status/1163745908430974976&quot; target=_blank&gt;@MitologiaWsp&lt;/a&gt;] oraz &lt;a href=&quot;https://www.tygodnikpowszechny.pl/jak-zalozyc-partie-ktora-sie-przebije-160009&quot; target=_blank&gt;artykuł w Tygodniku Powszechnym&lt;/a&gt; 
+Nazwy partii politycznych: &lt;a href=&quot;https://twitter.com/mitologiawsp/status/1163745908430974976&quot; target=_blank&gt;@MitologiaWsp&lt;/a&gt; oraz &lt;a href=&quot;https://www.tygodnikpowszechny.pl/jak-zalozyc-partie-ktora-sie-przebije-160009&quot; target=_blank&gt;artykuł w Tygodniku Powszechnym&lt;/a&gt; 
 
 ## Wygląd gry
 &lt;a href=&quot;https://twine2.neocities.org/#introduction_example-stories&quot; target=_blank&gt;https://twine2.neocities.org/#introduction_example-stories&lt;/a&gt; </tw-passagedata><tw-passagedata pid="9" name="Prowadzenie zajęć na jednej z polskich uczelni" tags="" position="195.66666666666669,420.66666666666663" size="100,100">Aby uniknąć lokowania produktu, nazwa uczelni w grze pozostanie utajniona, może poza podpowiedzią, że jest to jedna z uczelni we wschodniej Polsce, a jej patronką jest jedyna osoba, która otrzymała Nagrodę Nobla w dwóch różnych dziedzinach nauki[[🥇]].
