--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	(color:black) +
 	(hover-style: (color:black) + (bg:orange))
 )</tw-passagedata><tw-passagedata pid="5" name="Start" tags="" position="186.3333333333334,92.99999999999999" size="100,100">Witaj w drugiej części gry o inflacji. W &lt;a href=&quot;https://gkwiatk.github.io/gra-inflacja/&quot; target=_blank&gt;pierwszej&lt;/a&gt; poznaliśmy koszty inflacji oraz ilościową teorię pieniądza. W tej części omówimy czynniki inflacji, a także przeanalizujemy powody szybkiego wzrostu cen w Polsce w ostatnich latach (oczywiście daleko nam do Zimbabwe!). 
-Do tego w tej wersji zostało wprowadzonych kilka rozszerzeń m.in. możliwość zmiany wyglądu gry poprzez wybór jednego z poniższych przycisków:
+Do tego w tej wersji zostało wprowadzonych kilka rozszerzeń m.in. możliwość zmiany wyglądu gry poprzez wybór jednego z poniższych przycisków (polecam styl 1):
 (set: _styleLink to (macro: str-type _name, [
 	(out:)[(link:_name)[(Set:$STYLE to _name)(goto:&quot;Start&quot;)]]
 ]))(_styleLink:&quot;Styl 1&quot;) ~ \
